modules/panel/client/css/panel.css
/* ... */
.buttonRow {
    /*padding-top: 10px;*/
    width: 105%;
    display: table;
}

.maximized .sidepanel .learning-buttons .row {
    /*padding: 10pt 20pt 0 20pt;*/
    background: transparent;
}

.learning-buttons hr {
    margin: 0 auto;
    width: 90%;
    border-color: #eeeeee;
}


.maximized .learning-buttons .halfWidthBtn {
    width: 48.5%;
}

.maximized .learning-buttons .btn-group {
    width: 100%;
}
.maximized .learning-buttons .learned-state .btn-group .btn {
    width: 33.3%;
}

.learning-buttons .btn[disabled] {
    opacity: 1;
    cursor: default;
    pointer-events: none;
}



#kalli-button-not-seen,
#kalli-button-seen,
#kalli-button-understood, 
#kalli-button-set-goal, 
#kalli-button-unset-goal, 
#kalli-button-map, 
#kalli-button-previous, 
#kalli-button-next {
    font-size: 10px;
    font-family: 'Roboto';
    font-weight: 400;
    background: none;
    color: #222;
    width: auto;
    height: auto;
    border-radius: 5px;
    box-sizing: border-box;
    padding: 0;
    vertical-align: middle;
    text-align: left;
    display: block;
    position: relative;
    margin-top: 10px;
    margin-right: 10px;
    border: none;
    text-shadow: none;
    box-shadow: none;
}

#kalli-button-not-seen:hover,
#kalli-button-seen:hover,
#kalli-button-understood:hover, 
#kalli-button-set-goal:hover, 
#kalli-button-unset-goal:hover, 
#kalli-button-map:hover, 
#kalli-button-previous:hover, 
#kalli-button-next:hover {
    color: #000;
    background: #ccc;
    text-decoration: none;
}

#kalli-button-not-seen,
#kalli-button-seen,
#kalli-button-understood, 
#kalli-button-set-goal, 
#kalli-button-unset-goal, 
#kalli-button-map {
    float: left;
}


#kalli-button-understood {
    margin-left: 8%;
}

#kalli-button-map, 
#kalli-button-set-goal, 
#kalli-button-unset-goal {
    left: 14%;
    margin-top: 5px;
}
#kalli-button-set-goal > .setgoal {   
    letter-spacing: -0.01em;
    font-size: 10px;
}

#kalli-button-map {
    top: -30px;
    left: -300px;
    text-decoration: none;
    /*border: 1px solid;*/
    width: 30px;
}

#kalli-button-map > span.map-text {
    float: left;
    line-height: 1;
}
#kalli-button-map > span.map-icon {
    display: block;
    position: relative;
    left: 25px;
    top: 5px;
}


#kalli-button-set-goal > a:hover, 
#kalli-button-unset-goal > a:hover {
    text-decoration: none;
    border: none;
    text-shadow: none;
} 

#kalli-button-previous, #kalli-button-next {
    left: 75%;
    width: 90px;
    margin-top: 0;
}



/** -------------------------------- LECTURE TAB -------------------------------- **/
.lectureList {
    list-style-type: none;
}
.lectureList .concept-line span {
    border-color: #337ab7;
}

.lectureList .lecture {
    position: relative;
    margin-bottom: 20px;
}
.lectureList .lecture > a {
    text-decoration: none;
    border: 1px solid #aaa;
    border-radius: 5px;
    padding: 5px;
    background: #fff;
    position: relative;
    z-index: 2;
}

.lectureList .lecture > .concept-line {
    left: 14px;
    top: -3px;
    height: 18px;
}



/** -------------------------------- Icons -------------------------------- **/


.lecture-icon, .wiki-icon, .map-icon {
    display:inline-block;
    position:relative;
    top:8px;
    margin-top:-8px;

}


.lecture-icon {
    background: url('../../../modules/learning/img/lecture.svg');
    background-size: 20px 20px;
    background-position: -2px 0;
    width:20px;
    height:20px;
}

.wiki-icon {
    background: url('../../../modules/learning/img/Wikipedia_W.svg');
    background-size: 20px 20px;
    width:20px;
    height:20px;
    top: 6px;
    left: -2px;
}

.map-icon {
    background: url('../../../modules/courses/img/gov2001_big.png');
    background-repeat: no-repeat;
    background-size: 22px 22px;
    width:22px;
    height:22px;
}
.panel-minimized .map-icon {
    background-size: 16px 16px;
    background-position: 1px 2px;
}
.map-icon-large {
    background-size: 40px 40px;
    width: 40px;
    height: 40px;
    left: -7px
}


/**** -------------------------------- ADMIN STUFF -------------------------------- ***/

.action-icon {
    padding: 0 0 0 8px;
    top: 3px;
    float: right;
    padding-top: 3px;
}

.concept .remove-concept {
    color: darkred;

}

.concept .add-segment-to-concept {
    color: darkgreen;
}

.handle {
    cursor: pointer;
    color: cornflowerblue;
    top: 0;
    /*top: 5px;
    right: -80px;*/
}

.addConceptIcon {
    color:#008800;
    padding-top: 3px;
}

.addingTo {
    border: 2px dotted #00A000;
}

.segment-actions {
    position: absolute;
    right: 7px;
    top: 7px;
}
.segment-actions a {
    padding: 5px;
}
.remove-segment-from-concept, .delete-segment {
    color: darkred;
}

/*** OPTIONS ***/
.maximized .sidepanelOptions {
    float: right;
    margin-right: 8px;
    margin-top:7px;
    z-index: 20;
}

.maximized .sidepanelOptions  > a {
    padding: 10px;
    z-index: 20;
}

.minimizer {
    font-size: 18px;
    color: #555;
    z-index: 20;
}
.minimizer:hover {
    text-decoration: none;
}



input[type=color] {
    visibility: hidden;
    position:absolute;
}


/** -------------------------------- FADING -------------------------------- **/
.fadein,
.fadeout {
    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .8s;
    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .8s;
    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .8s;
    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .8s;
}

.fadein.ng-hide-remove,
.fadeout.ng-hide-add.ng-hide-add-active {
    opacity: 0;
}

.fadeout.ng-hide-add,
.fadein.ng-hide-remove.ng-hide-remove-active {
    opacity: 1;

}
.ng-hide-add-active:not(.fadeout) {
    display: none !important;
}



/** -------------------------------- MINIMIZED -------------------------------- **/
.panel-minimized {
    /*margin-left: -8pt;*/
    font-size: 0;
}
.panel-minimized .panel-header h2, .panel-minimized .tab-selection, .panel-minimized .plan-intro {
    display: none;
}
/* ... */

